findbugs suggestions